fix: fix the appearance of a horizontal scroll bar that appeared at certain screen latitudes

--- a/src/styles/Experience.scss
+++ b/src/styles/Experience.scss
@@ -139,6 +139,7 @@
       }
       &-contain{
         &_item{
+          padding: 10px 10px 10px 10px;
           &:first-child{
             margin-left: 31px;
           }
